Adaug qustioncontrollers
